--- a/src/components/App.css
+++ b/src/components/App.css
@@ -23,3 +23,11 @@ html, body, .app {
     border-left: 2px solid orange;
     padding-left: 8px;
 }
+
+.message__image {
+    padding: 16px;
+}
+
+.progress__bar {
+    margin: 0.3em 0 0 0 !important;
+}
