--- a/src/components/App.css
+++ b/src/components/App.css
@@ -54,3 +54,57 @@ html, body, .app {
     height: 35px;
     transform: rotate(225deg);
 }
+
+#notfound .notfound {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+.notfound {
+    /* max-width: 767px; */
+    width: 100%;
+    line-height: 1.4;
+    padding: 110px 40px;
+    text-align: center;
+    background: #fff;
+    -webkit-box-shadow: 0 15px 15px -10px rgb(0 0 0 / 10%);
+    box-shadow: 0 15px 15px -10px rgb(0 0 0 / 10%);
+}
+
+.notfound .notfound-404 {
+    position: relative;
+    height: 70vh;
+}
+
+.notfound .notfound-404 h1 {
+    font-family: roboto, sans-serif;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    font-size: 120px;
+    font-weight: 700;
+    margin: 0;
+    color: #262626;
+    text-transform: uppercase;
+}
+
+.notfound .notfound-404 h1>span {
+    color: #00b7ff;
+}
+
+.notfound h2 {
+    font-family: roboto, sans-serif;
+    font-size: 22px;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #151515;
+    margin-top: 0;
+    margin-bottom: 25px;
+}
