--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,8 +1,8 @@
-html, body, .app {
+/* html, body, .app {
     height: 100vh;
     background: #8244FF;
     padding: 20px;
-}
+} */
 
 .menu {
     padding-bottom: 32px;
@@ -77,7 +77,7 @@ html, body, .app {
 
 .notfound .notfound-404 {
     position: relative;
-    height: 70vh;
+    height: 68vh;
 }
 
 .notfound .notfound-404 h1 {
