--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+html, body, .app {
+  height: 100vh;
+  background: #8244FF;
+  padding: 20px;
 }
