--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,8 +1,8 @@
-/* html, body, .app {
+.app {
     height: 100vh;
     background: #8244FF;
     padding: 20px;
-} */
+}
 
 .menu {
     padding-bottom: 32px;
@@ -65,8 +65,9 @@
 }
 
 .notfound {
+    margin: 20px 0px 0px 10px;
     /* max-width: 767px; */
-    width: 100%;
+    width: 98%;
     line-height: 1.4;
     padding: 110px 40px;
     text-align: center;
